# celery-flower-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  flower_app.py  pyproject.toml  requirements.txt
