[project]
name = "celery-flower-monitor"
version = "1.0.0"
description = "Lightweight, standalone Celery monitoring service using Flower"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.0",
    "flower>=2.0.1",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
